// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Booking Forms Book a Table 1`] = `
<div
  className="booking-form"
>
  <h1>
    Book a Table
  </h1>
  <form
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <label
        for="book-table-name"
      >
        Name
      </label>
      <input
        className="form-control"
        id="book-table-name"
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="Name"
        type="text"
        value=""
      />
      <p
        className="help-block"
      >
        Please enter your name.
      </p>
    </div>
    <div
      className="form-group"
    >
      <label
        for="book-table-email"
      >
        Email address
      </label>
      <input
        className="form-control"
        id="book-table-email"
        name="email"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="Email"
        type="email"
        value=""
      />
      <p
        className="help-block"
      >
        Please enter a valid email address
      </p>
    </div>
    <div
      className="form-group"
    >
      <label
        for="book-table-phone"
      >
        Phone No.
      </label>
      <input
        className="form-control"
        id="book-table-phone"
        name="phone"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="Phone No."
        type="tel"
        value=""
      />
      <p
        className="help-block"
      >
        Please provide a UK Phone Number or Mobile Telephone Number.
      </p>
    </div>
    <div
      className="form-group"
    >
      <label
        for="book-table-date"
      >
        Date of Event
      </label>
      <input
        className="form-control"
        id="book-table-date"
        name="date"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="Date of Visit"
        type="date"
        value=""
      />
      <p
        className="help-block"
      >
        Please choose a valid date for your event
      </p>
    </div>
    <div
      className="form-group"
    >
      <label
        for="book-table-type"
      >
        Type of Event
      </label>
      <select
        className="form-control"
        id="book-table-type"
        name="date"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="Type of Event"
        value=""
      >
        <option
          value="Dinner"
        >
          Dinner
        </option>
        <option
          value="Table"
        >
          Late Night Table
        </option>
        <option
          value="Cocktails"
        >
          Cocktails
        </option>
      </select>
    </div>
    <div
      className="form-group"
    >
      <label
        for="book-table-numpeople"
      >
        Number of People
      </label>
      <input
        className="form-control"
        id="book-table-numpeople"
        name="numpeople"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="No. of People"
        type="number"
        value=""
      />
      <p
        className="help-block"
      >
        Please enter the number of people that will be attending your event.
      </p>
    </div>
    <div
      className="form-group"
    >
      <label
        for="book-table-additional"
      >
        Additional Requests
      </label>
      <textarea
        className="form-control"
        id="book-table-additional"
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="Additional requests and comments to add to your booking enquiry (optional)"
        value=""
      />
    </div>
    <button
      className="btn btn-default"
      type="submit"
    >
      Send Request
    </button>
  </form>
</div>
`;

exports[`Storyshots Booking Forms Events 1`] = `
<div
  className="booking-form"
>
  <h1>
    Event Enquiry
  </h1>
  <form
    onSubmit={[Function]}
  >
    <div
      className="form-group "
    >
      <label
        className="control-label"
      >
        Name
      </label>
      <input
        className="form-control"
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="Name"
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group "
    >
      <label
        className="control-label"
      >
        Email
      </label>
      <input
        className="form-control"
        name="email"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="Email"
        type="email"
        value=""
      />
    </div>
    <div
      className="form-group "
    >
      <label
        className="control-label"
      >
        Phone No.
      </label>
      <input
        className="form-control"
        name="phone"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="Phone No."
        type="tel"
        value=""
      />
    </div>
    <div
      className="form-group "
    >
      <label
        className="control-label"
      >
        Date of Visit (day/month/year)
      </label>
      <input
        className="form-control"
        name="date"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="Date of Visit (day/month/year)"
        type="date"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        for="book-event-toe"
      >
        Type of Event
      </label>
      <select
        className="form-control"
        id="book-event-toe"
        name="toe"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="Type of Event"
        value=""
      >
        <option
          value="Birthday"
        >
          Birthday
        </option>
        <option
          value="Private"
        >
          Private
        </option>
        <option
          value="Corporate"
        >
          Corporate
        </option>
        <option
          value="Christmas"
        >
          Christmas
        </option>
      </select>
    </div>
    <div
      className="form-group"
    >
      <label
        for="book-event-eoln"
      >
        Evening or Late Night
      </label>
      <select
        className="form-control"
        id="book-event-eoln"
        name="eoln"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="Evening or Late Night"
        value=""
      >
        <option
          value="Evening"
        >
          Evening (18:00 - 22:00)
        </option>
        <option
          value="Late"
        >
          Late Night (22:00 - 03:00)
        </option>
      </select>
    </div>
    <div
      className="form-group "
    >
      <label
        className="control-label"
      >
        Arrival Time
      </label>
      <input
        className="form-control"
        name="time"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="Arrival Time"
        type="time"
        value=""
      />
    </div>
    <div
      className="form-group "
    >
      <label
        className="control-label"
      >
        No. of People
      </label>
      <input
        className="form-control"
        name="numpeople"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="No. of People"
        type="number"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label>
        Also Required:
      </label>
      <div
        className="checkbox"
      >
        <label
          for="dj"
        >
          <input
            checked={false}
            id="dj"
            name="dj"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            type="checkbox"
            value=""
          />
          DJ
        </label>
      </div>
      <div
        className="checkbox"
      >
        <label
          for="food"
        >
          <input
            checked={false}
            id="food"
            name="food"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            type="checkbox"
            value=""
          />
          Food
        </label>
      </div>
      <div
        className="checkbox"
      >
        <label
          for="cocktails"
        >
          <input
            checked={false}
            id="cocktails"
            name="cocktails"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            type="checkbox"
            value=""
          />
          Cocktails
        </label>
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        for="book-event-additional"
      >
        Additional Requests
      </label>
      <textarea
        className="form-control"
        id="book-event-additional"
        name="additional"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="Additional requests and comments to add to your booking enquiry (optional)"
        value=""
      />
    </div>
    <button
      className="btn btn-lg
           btn-default 
          
          
          "
      disabled={false}
      type="submit"
    >
      Send Request
    </button>
  </form>
</div>
`;
